--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,171 +1,127 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf" date="2022-04-25T08:08:26Z" product-name="fp_newsletter">
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2018-06-15T15:10:55Z" product-name="fp_newsletter">
 		<header/>
 		<body>
-			<trans-unit id="tx_fp_newsletter_domain_model_pi1" resname="tx_fp_newsletter_domain_model_pi1">
-				<source>Newsletter subscriber management</source>
+			<trans-unit id="tx_fp_newsletter_domain_model_pi1">
 				<target>Newsletter-Abonnenten-Management</target>
 			</trans-unit>
-			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description" resname="tx_fp_newsletter_domain_model_pi1.description">
-				<source>Privacy compliant plugin for newsletter subscription and unsubscription (for direct_mail via tt_address/luxletter via fe_users).</source>
-				<target>Datenschutzkonformes Plugin für NL-An- und Abmeldungen via tt_address oder fe_users.</target>
+			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description">
+				<target>Datenschutzkonformes Plugin für direct_mail An- und Abmeldungen via tt_address.</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log" resname="tx_fpnewsletter_domain_model_log">
-				<source>Log</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log">
 				<target>Log</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.language" resname="tx_fpnewsletter_domain_model_log.language">
-				<source>Language</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.language">
 				<target>Sprache</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.allLanguages" resname="tx_fpnewsletter_domain_model_log.allLanguages">
-				<source>all languages</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.allLanguages">
 				<target>alle Sprachen</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.l18n_parent" resname="tx_fpnewsletter_domain_model_log.l18n_parent">
-				<source>Parent</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.l18n_parent">
 				<target>Ursprung</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.hidden" resname="tx_fpnewsletter_domain_model_log.hidden">
-				<source>Hidden?</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.hidden">
 				<target>Verbergen?</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.tstamp" resname="tx_fpnewsletter_domain_model_log.tstamp">
-				<source>Time stamp</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.tstamp">
 				<target>Datum und Zeit</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gender" resname="tx_fpnewsletter_domain_model_log.gender">
-				<source>Gender</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender">
 				<target>Anrede</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.title" resname="tx_fpnewsletter_domain_model_log.title">
-				<source>Title</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.title">
 				<target>Titel</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.firstname" resname="tx_fpnewsletter_domain_model_log.firstname">
-				<source>Firstname</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.firstname">
 				<target>Vorname</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.lastname" resname="tx_fpnewsletter_domain_model_log.lastname">
-				<source>Lastname</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.lastname">
 				<target>Nachname</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.email" resname="tx_fpnewsletter_domain_model_log.email">
-				<source>E-Mail</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.email">
 				<target>E-Mail</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.address" resname="tx_fpnewsletter_domain_model_log.address">
-				<source>Address</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.address">
 				<target>Adresse</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.zip" resname="tx_fpnewsletter_domain_model_log.zip">
-				<source>Zip</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.zip">
 				<target>PLZ</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.city" resname="tx_fpnewsletter_domain_model_log.city">
-				<source>City</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.city">
 				<target>Ort</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.region" resname="tx_fpnewsletter_domain_model_log.region">
-				<source>Region</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.region">
 				<target>Region</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.country" resname="tx_fpnewsletter_domain_model_log.country">
-				<source>Country</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.country">
 				<target>Land</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.phone" resname="tx_fpnewsletter_domain_model_log.phone">
-				<source>Phone</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.phone">
 				<target>Telefon</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.mobile" resname="tx_fpnewsletter_domain_model_log.mobile">
-				<source>Mobile</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mobile">
 				<target>Mobil</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.fax" resname="tx_fpnewsletter_domain_model_log.fax">
-				<source>Fax</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.fax">
 				<target>Fax</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.www" resname="tx_fpnewsletter_domain_model_log.www">
-				<source>WWW</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.www">
 				<target>WWW</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.position" resname="tx_fpnewsletter_domain_model_log.position">
-				<source>Position</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.position">
 				<target>Position</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.company" resname="tx_fpnewsletter_domain_model_log.company">
-				<source>Company</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.company">
 				<target>Institution/Organisation</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.categories" resname="tx_fpnewsletter_domain_model_log.categories">
-				<source>Categories (comma separated)</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.categories">
 				<target>Kategorien (Kommagetrennt)</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status" resname="tx_fpnewsletter_domain_model_log.status">
-				<source>Status</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status">
 				<target>Status</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.securityhash" resname="tx_fpnewsletter_domain_model_log.securityhash">
-				<source>Security-hash</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.securityhash">
 				<target>Security-hash</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken" resname="tx_fpnewsletter_domain_model_log.retoken">
-				<source>reCaptcha-token</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken">
 				<target>reCaptcha-token</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha" resname="tx_fpnewsletter_domain_model_log.mathcaptcha">
-				<source>Mathematical captcha</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha">
 				<target>Math. Captcha</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr" resname="tx_fpnewsletter_domain_model_log.gdpr">
-				<source>GDPR</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr">
 				<target>DSGVO</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mrs" resname="tx_fpnewsletter_domain_model_log.gender.mrs">
-				<source>Mrs.</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mrs">
 				<target>Frau</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mr" resname="tx_fpnewsletter_domain_model_log.gender.mr">
-				<source>Mr.</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mr">
 				<target>Herr</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.divers" resname="tx_fpnewsletter_domain_model_log.gender.divers">
-				<source>Divers</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.divers">
 				<target>Divers</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.0" resname="tx_fpnewsletter_domain_model_log.status.0">
-				<source>unknown</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.0">
 				<target>unbekannt</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.1" resname="tx_fpnewsletter_domain_model_log.status.1">
-				<source>subscribed, waiting for verify</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.1">
 				<target>angemeldet, warte auf Bestätigung</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.2" resname="tx_fpnewsletter_domain_model_log.status.2">
-				<source>subscribed, verified</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.2">
 				<target>angemeldet, bestätigt</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.3" resname="tx_fpnewsletter_domain_model_log.status.3">
-				<source>unsubscribed, waiting for verify</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.3">
 				<target>abgemeldet, warte auf Bestätigung</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.4" resname="tx_fpnewsletter_domain_model_log.status.4">
-				<source>unsubscribed, verified</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.4">
 				<target>abgemeldet, bestätigt</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.6" resname="tx_fpnewsletter_domain_model_log.status.6">
-				<source>already subscribed</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.6">
 				<target>schon angemeldet</target>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.7" resname="tx_fpnewsletter_domain_model_log.status.7">
-				<source>unsubscribed</source>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.7">
 				<target>abgemeldet</target>
-			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status.8" resname="tx_fpnewsletter_domain_model_log.status.8">
-				<source>Email not found</source>
-				<target>die E-Mail-Adresse wurde nicht gefunden</target>
 			</trans-unit>
 		</body>
 	</file>
