--- a/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
@@ -7,7 +7,7 @@
 				<source>Newsletter subscriber management</source>
 			</trans-unit>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description">
-				<source>Plugin for newsletter subscription and unsubscription. For the table: tt_address or fe_users. A log is written.</source>
+				<source>Plugin for newsletter subscription and unsubscription. For the table: tt_address. A log is written.</source>
 			</trans-unit>
 			<trans-unit id="gender.description">
 				<source>Gender</source>
